# gaofen_M100

./: .gaofen_3.launch.swp  gaofen_3.launch  gaofen_3.launch~  gaofen_3_20180820.launch  log (17-34).txt  log (copy).txt  log.txt  log1.txt  log_lh.txt  log_lh.txt~
src/.kdev4/: src.kdev4
src/dji_sdk/: CMakeLists.txt
src/dji_sdk/launch/: sdk_manifold.launch
src/dji_sdk/msg/: DetectionPoints.msg  Reldist.msg
src/dji_sdk_demo/: CMakeLists.txt
src/dji_sdk_demo/launch/: m100_base_test.launch
src/dji_sdk_demo/src/: .main_3_new.cpp.swp  m100_base_control.cpp  m100_base_test.cpp  m100_takeoff_landing.cpp  main_3.cpp  main_3_new _2018_08_13.cpp  main_3_new.cpp  main_3_new.cppAJ9203.new  main_3_new.cppAW2846.new  main_4.cpp  (+18 more)
src/dji_sdk_read_cam/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/dji_sdk_read_cam/include/ARToolKitPlus/: TrackerSingleMarker.h
src/dji_sdk_read_cam/include/AprilTags/: GLine2D.h  TagDetection.h  TagDetector.h  apriltagdetector.h  apriltagdetector.h~  pch.h  quad.h
src/dji_sdk_read_cam/include/MST/: CircleDetection.h  Edge.h  NumberDetection.h  NumberDetection.h~
src/dji_sdk_read_cam/launch/: manifold_cam.launch
src/dji_sdk_read_cam/src/: .apriltagdetector.cpp.kate-swp  CircleDetection.cpp  apriltagdetector.cpp  apriltagdetector.cpp~  apriltagdetector111.cpp~  apriltagdetector_0823.cpp  apriltagdetector_20180824.cpp  apriltagdetector_2018_08_21_1800.cpp  apriltagdetector_demo.cpp  nv_cam.cpp  nv_cam.cpp~  nv_cam_20180819.cpp
src/m100_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  package.xml
src/m100_base_controller/: CMakeLists.txt  package.xml
src/m100_navigation_goals/: CMakeLists.txt  package.xml
src/m100_tf/: CMakeLists.txt  package.xml
(+19 files in other folders)
